<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.eduardoaleixo.phase3app.AdminMenu"
    tools:showIn="@layout/activity_admin_menu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_search"
        android:id="@+id/flightSearch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToSearchForFlights"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itin_search"
        android:id="@+id/itinSearch"
        android:layout_below="@+id/flightSearch"
        android:layout_centerHorizontal="true"
        android:onClick="searchItineraries"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_clients"
        android:id="@+id/viewAllClients"
        android:layout_below="@+id/itinSearch"
        android:layout_centerHorizontal="true"
        android:onClick="displayAllClients"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_client_info"
        android:id="@+id/uploadClientInfo"
        android:layout_below="@+id/viewClientInfo"
        android:layout_centerHorizontal="true"
        android:onClick="goToUploadClientInfo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_flight_info"
        android:id="@+id/viewFlightInfo"
        android:layout_below="@+id/uploadClientInfo"
        android:layout_centerHorizontal="true"
        android:onClick="goToViewFlights"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_flight_info"
        android:id="@+id/uploadFlightInfo"
        android:layout_below="@+id/viewFlightInfo"
        android:layout_centerHorizontal="true"
        android:onClick="goToLoadFlights"/>
    </LinearLayout>

</RelativeLayout>
